This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
7/2/19: Improved beam autocentering setup dialog to be no-modal, behave better
in Low Dose, and provide a shift for centering the beam and a post-centering
offset.

7/2/19: Added task to wait for drift and script command to run it.

7/2/19: Fixed cross-contamination of spot intensity calibrations when there is
no property for number of spot sizes (In 3.7).

7/1/19: Fixed Y direction of MoveBeamByMicrons command (In 3.7).

6/22/19: SEM_3-7-6
6/19/19: The stage X/Y position can be restored after tilting in a tilt
series, controlled by a property and on by default for dose-symmetric series
on FEI scopes.

6/19/19: Dose-symmetric series added to tilt series controller with flexible
tilting parameters and almost all of the usual features available.

6/19/19: Stopped bidirectional series from centering beam at a specified angle
on both sides instead of just second side.

6/19/19: Tilt series controller will check for image shift within limits both
at start of cycle and after the tracking shot if any.

6/18/19: Added script command to close the frame mdoc file.

6/18/19: Bidirectional tilt series now appear in the little stack window in
proper order.

6/18/19: Changed property StepForBidirReturn to be TSStepForBidirReturn to
match help (In 3.7).

6/16/19: Fixed running scripts from Acquire at Items in dummy copy (In 3.7).

6/12/19: Changed some defaults (In 3.7)
   Stigmator value for astigmatism calibration to 0.04
   KeepEFTEMState property to 1 (In 3.7).
   Slower search when CTF fitting on click

6/7/19: Fixed problem with calling script functions when autosave settings is
turned on (In 3.7).

6/6/19: Started taking account of changes in beam shift calibration when