@@ -52,6 +52,7 @@ FLOAT_PROP_TEST("MinimumK2FrameTime", camera->, MinK2FrameTime)
 FLOAT_PROP_TEST("K2ReadoutInterval", camera->, K2ReadoutInterval)
 FLOAT_PROP_TEST("MinimumK3FrameTime", camera->, MinK3FrameTime)
 FLOAT_PROP_TEST("K3ReadoutInterval", camera->, K3ReadoutInterval)
+FLOAT_PROP_TEST("K3HWDarkRefExposure", camera->, K3HWDarkRefExposure)
 FLOAT_PROP_TEST("K2BaseModeScaling", camera->, K2BaseModeScaling)
 BOOL_PROP_TEST("NoK2SaveFolderBrowse", camera->, NoK2SaveFolderBrowse)
 BOOL_PROP_TEST("K2SynchronousSaving", camera->, K2SynchronousSaving)
