@@ -847,6 +847,10 @@
             multiple of this.&nbsp; The default is 0.000666 sec.</TD>
         </TR>
         <TR VALIGN="top">
+          <TD>K3HWDarkRefExposure</TD>
+          <TD>Exposure time to use for updating the hardware dark reference on a K3. The default is 10 sec.</TD>
+        </TR>
+        <TR VALIGN="top">
           <TD>K2BaseModeScaling</TD>
           <TD>Scaling that the SerialEMCCD plugin will apply to images if K2Type is 2 (for a 
             K2 Base camera, or Summit in Base mode).&nbsp; The default is 0.25.</TD>
