@@ -151,7 +151,7 @@
       <P>Use one of these commands to open a <A HREF="hidd_macro.htm">Script Editing 
         Window</A> for editing the given script. Use the left or right
         &#39;Editor &#39; arrows in the editing 
-        window to get to higher numbered scripts other than 15 and 20.  You
+        window to get to scripts numbered higher than 10.&nbsp;  You
         can also open an editor for an existing script by holding down the
         Ctrl key and pressing a button for the script in the Script Toolbar or
         in the <A HREF="hidd_camera_macro.htm">Camera &amp; Script Control Panel</A>.</P>
